# llvm-project2

clang/lib/AST/: ASTImporter.cpp  DeclPrinter.cpp  ExternalASTMerger.cpp  OpenMPClause.cpp  StmtProfile.cpp
clang/lib/CodeGen/: BackendUtil.cpp  CGLoopInfo.cpp  CGLoopInfo.h  CGOpenMPRuntime.cpp  CGOpenMPRuntime.h  CGOpenMPRuntimeGPU.cpp  CGStmt.cpp  CGStmtOpenMP.cpp  CMakeLists.txt  CodeGenFunction.h  CodeGenModule.cpp
clang/lib/FrontendTool/: CMakeLists.txt  ExecuteCompilerInvocation.cpp
clang/lib/Parse/: ParseOpenMP.cpp  ParsePragma.cpp  ParseStmt.cpp
clang/lib/Sema/: SemaOpenMP.cpp  SemaStmtAttr.cpp  TreeTransform.h
clang/lib/Serialization/: ASTReader.cpp  ASTWriter.cpp
clang/test/: CMakeLists.txt
clang/test/CodeGen/: pragma-transform.c  pragma-transform.cpp
clang/test/Input-Gen/: external-dep.cpp  function-dep-minimize.cpp  global-minimize.cpp  record-function-dep.cpp  (+4 more)
clang/tools/: CMakeLists.txt
compiler-rt/: CMakeLists.txt
compiler-rt/lib/: CMakeLists.txt
flang/: CMakeLists.txt
flang/omp_runtime/: CMakeLists.txt  assign.cpp  matmul.cpp  rocm.cpp  rocm.h  utils.h
flang/runtime/: CMakeLists.txt  descriptor-omp.cpp
input-gen-runtimes/: rt-common.hpp  rt-dump-input.hpp  rt-input-gen.cpp  rt-input-record.cpp  rt-run.cpp
llvm/test/: lit.cfg.py
llvm/tools/: CMakeLists.txt
logs/: debug.out  debug.stencil.out
memred-runtimes/: trace.cpp
mlir/lib/: CMakeLists.txt
mlir/lib/Conversion/Polymer/Support/: CMakeLists.txt  IslScop.cc  OslScop.cc  ScopStmt.cc
mlir/utils/: generate-test-checks.py
scripts/: inputgen_minimize.py
(+217 files in other folders)
